--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,33 @@ body {
     padding: 0;
 }
 
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.contact-info > div {
+    margin-bottom: 10px;
+}
+
+.profile-counter {
+    display: flex;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    color: #333;
+}
+
+.counter-icon {
+    width: 20px;
+    height: 20px;
+    align-content: left;
+    
+}
+
+
 .container {
     max-width: 900px;
     margin: 0 auto;
