--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
 .cover-image {
     width: 100%;
     height: 200px;
-    background-image: url('cover-placeholder.jpeg');
+    background-image: url('aicoverbannerone.png');
     background-size: cover;
     background-position: center;
     border-top-left-radius: 10px;
